@@ -1,0 +1,5 @@
+module Wrath
+  class MoonCrater < Tile
+    SPRITE_POSITION = [7, 0]
+  end
+end
