@@ -1,0 +1,5 @@
+module Wrath
+  class MoonDust < Tile
+    SPRITE_POSITION = [6, 0]
+  end
+end
